--- a/views/actor_list.pug
+++ b/views/actor_list.pug
@@ -7,6 +7,12 @@ block content
     div.form-group
       input.checkbox-input(type='checkbox', name='all-followed-for-random-users', id='all-followed-for-random-users')
       label(for='all-followed-for-random-users') &nbsp;Get random followers of <b>all</b> stored followed
+      br
+      label(for='followed-for-random-users') Get random followers of a single followed:
+      select#followed-for-random-users.form-control(name='followed-for-random-users')
+        option(value='') --Please select an actor--
+        for actor in followed_actors
+          option(value=actor._id) #{actor.displayName}
     div.form-group
       label(for='how-much-random-users') How much random users:
         input#how-much-users.form-control(type='text', name='how-much-random-users' value=250 )
