added keyword search

--- a/views/actor_list.pug
+++ b/views/actor_list.pug
@@ -21,7 +21,7 @@ block content
         input#how-much-users.form-control(type='text', name='how-much-user-sites-together' value=20 )
       br
       label(for='keywords') Keywords (separated by comma and other punctuations):
-      input#how-much-users.form-control(type='text', name='keywords' value=20 )
+      input#how-much-users.form-control(type='text', name='keywords' value=keywords)
     div.form-group
       input.checkbox-input(type='checkbox', name='remove-followed-by-standard-follower', id='remove-followed-by-standard-follower', checked)
       label(for='remove-followed-by-standard-follower') &nbsp;Remove users already followed by standard follower.
