--- a/views/actor_list.pug
+++ b/views/actor_list.pug
@@ -5,35 +5,35 @@ block content
 
   form(method='POST')
     div.form-group
-      input.checkbox-input(type='checkbox', name='all-followed-for-random-users', id='all-followed-for-random-users')
-      label(for='all-followed-for-random-users') &nbsp;Get random followers of <b>all</b> stored followed
+      input#all_followed_for_random_actors.checkbox-input(type='checkbox', name='all_followed_for_random_actors')
+      label(for='all_followed_for_random_actors') &nbsp;Get random followers of <b>all</b> stored followed
       br
-      label(for='followed-for-random-users') Get random followers of a single followed:
-      select#followed-for-random-users.form-control(name='followed-for-random-users')
+      label(for='followed_for_random_actors') Get random followers of a single followed:
+      select#followed_for_random_actors.form-control(name='followed_for_random_actors')
         option(value='') --Please select an actor--
         for actor in followed_actors
           option(value=actor._id) #{actor.displayName}
     div.form-group
-      label(for='how_much_random_users') How much random users:
-        input#how-much-users.form-control(type='text', name='how_much_random_users' value=numberOfUsers )
+      label(for='how_much_random_actors') How much random actors:
+        input#how_much_random_actors.form-control(type='text', name='how_much_random_actors' value=numberOfActors )
       br
-      label(for='how-much-user-sites-together') How much user sites open together:
-        input#how-much-users.form-control(type='text', name='how-much-user-sites-together' value=20 )
+      label(for='how_much_actor_sites_together') How much actor sites open together:
+        input#how_much_actor_sites_together.form-control(type='text', name='how_much_actor_sites_together' value=20 )
       br
       label(for='keywords') Keywords (separated by comma and other punctuations):
-      input#how-much-users.form-control(type='text', name='keywords' value=keywords)
+      input#keywords.form-control(type='text', name='keywords' value=keywords)
     div.form-group
-      input.checkbox-input(type='checkbox', name='remove-followed-by-standard-follower', id='remove-followed-by-standard-follower', checked)
-      label(for='remove-followed-by-standard-follower') &nbsp;Remove users already followed by standard follower.
+      input#remove_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_followed_by_standard_follower', checked)
+      label(for='remove_followed_by_standard_follower') &nbsp;Remove actors already followed by standard follower.
       br
-      input.checkbox-input(type='checkbox', name='remove-following-standard-follower', id='remove-following-standard-follower', checked)
-      label(for='remove-following-standard-follower') &nbsp;Remove users following the standard follower
+      input#remove_following_standard_follower.checkbox-input(type='checkbox', name='remove_following_standard_follower', checked)
+      label(for='remove_following_standard_follower') &nbsp;Remove actors following the standard follower
       br
-      input.checkbox-input(type='checkbox', name='remove-once-followed-by-standard-follower', id='remove-once-followed-by-standard-follower', checked)
-      label(for='remove-once-followed-by-standard-follower') &nbsp;Remove users once followed by standard follower.
+      input#remove_once_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_once_followed_by_standard_follower', checked)
+      label(for='remove_once_followed_by_standard_follower') &nbsp;Remove actors once followed by standard follower.
       br
-      input.checkbox-input(type='checkbox', name='show-despite-open-date exists', id='show-despite-open-date exists')
-      label(for='show-despite-open-date exists') &nbsp;Show users despite open date exists.
+      input#show_despite_open_date_exists.checkbox-input(type='checkbox', name='show_despite_open_date_exists')
+      label(for='show_despite_open_date_exists') &nbsp;Show actors despite open date exists.
 
     button.btn.btn-primary(type='submit') Submit
 
