--- a/views/actor_list.pug
+++ b/views/actor_list.pug
@@ -13,7 +13,7 @@ block content
       select#followed_for_random_actors.form-control(name='followed_for_random_actors')
         option(value='') --Please select an actor--
         for actor in followed_actors
-          option(value=actor._id) #{actor.displayName}
+          option(value=actor.did) #{actor.displayName}
     div.form-group
       label(for='how_much_random_actors') How much random actors:
         input#how_much_random_actors.form-control(type='text', name='how_much_random_actors', value=numberOfActors )
@@ -24,7 +24,7 @@ block content
       label(for='keywords') Keywords (separated by comma and other punctuations):
       input#keywords.form-control(type='text', name='keywords', value=keywords)
     div.form-group
-      input#remove_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_followed_by_standard_follower', checked)
+      input#remove_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_followed_by_standard_follower', checked=remove_followed_by_standard_follower_CHECKED)
       label(for='remove_followed_by_standard_follower') &nbsp;Remove actors already followed by standard follower.
       br
       input#remove_following_standard_follower.checkbox-input(type='checkbox', name='remove_following_standard_follower', checked)
