Now alternatives for filtering: followers of all stored followed actors  or of a single followed actor.

--- a/views/actor_list.pug
+++ b/views/actor_list.pug
@@ -6,7 +6,7 @@ block content
 
   form(method='POST')
     div.form-group
-      input#all_followed_for_random_actors.checkbox-input(type='checkbox', name='all_followed_for_random_actors')
+      input#all_followed_for_random_actors.checkbox-input(type='checkbox', name='all_followed_for_random_actors', checked=all_followed_for_random_actors_CHECKED)
       label(for='all_followed_for_random_actors') &nbsp;Get random followers of <b>all</b> stored followed
       br
       label(for='followed_for_random_actors') Get random followers of a single followed:
