Get and update follows of the standard follower.

--- a/views/followers_of_actor.pug
+++ b/views/followers_of_actor.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-
+  
   form(method='POST')
     div.form-group
       label(for='followed_actor') Add handle or DID of actor:
@@ -15,16 +15,5 @@ block content
       for error in errors
         li!= error.msg
 
-  br
-
-  //- if actor_list.length
-  //-   div.buttons-for-multiple-user-sites
-  //-     each actor, i in actor_list
-  //-       if (i+1) % howMuchActorSitesTogether == 0 || i == (actor_list.length - 1)
-  //-         input.button-user-sites(type=button, value=i+1, onclick="open_win(this)")
-  //-   ul
-  //-     each actor in actor_list
-  //-       li #{actor.actor.displayName} - #{actor.actor.description}
-
-  //- else
-  //-   p There are no actors.
+  br 
+  p The start value of the form is the DID of the standard actor. For this actor, not the followers but the follows are stored.
