activated 2 checkbox functionalities: Remove actors following / once followed be standard follower.

--- a/views/actor_list.pug
+++ b/views/actor_list.pug
@@ -30,10 +30,10 @@ block content
       input#remove_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_followed_by_standard_follower', checked=remove_followed_by_standard_follower_CHECKED)
       label(for='remove_followed_by_standard_follower') &nbsp;Remove actors already followed by standard follower.
       br
-      input#remove_following_standard_follower.checkbox-input(type='checkbox', name='remove_following_standard_follower', checked)
+      input#remove_following_standard_follower.checkbox-input(type='checkbox', name='remove_following_standard_follower', checked=remove_following_standard_follower_CHECKED)
       label(for='remove_following_standard_follower') &nbsp;Remove actors following the standard follower
       br
-      input#remove_once_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_once_followed_by_standard_follower', checked)
+      input#remove_once_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_once_followed_by_standard_follower', checked=remove_once_followed_by_standard_follower_CHECKED)
       label(for='remove_once_followed_by_standard_follower') &nbsp;Remove actors once followed by standard follower.
       br
       input#show_despite_open_date_exists.checkbox-input(type='checkbox', name='show_despite_open_date_exists')
