Activated checkbox functionality: Show actors despite open date exists.

--- a/views/actor_list.pug
+++ b/views/actor_list.pug
@@ -36,7 +36,7 @@ block content
       input#remove_once_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_once_followed_by_standard_follower', checked=remove_once_followed_by_standard_follower_CHECKED)
       label(for='remove_once_followed_by_standard_follower') &nbsp;Remove actors once followed by standard follower.
       br
-      input#show_despite_open_date_exists.checkbox-input(type='checkbox', name='show_despite_open_date_exists')
+      input#show_despite_open_date_exists.checkbox-input(type='checkbox', name='show_despite_open_date_exists', checked=show_despite_open_date_exists_CHECKED)
       label(for='show_despite_open_date_exists') &nbsp;Show actors despite open date exists.
 
     button.btn.btn-primary(type='submit') Submit
