--- a/views/actor_list.pug
+++ b/views/actor_list.pug
@@ -10,7 +10,7 @@ block content
       label(for='all_followed_for_random_actors') &nbsp;Get random followers of <b>all</b> stored followed
       br
       label(for='followed_for_random_actors') Get random followers of a single followed:
-      select#followed_for_random_actors.form-control(name='followed_for_random_actors')
+      select#followed_for_random_actors.form-control.col-md-2(name='followed_for_random_actors')
         option(value='') --Please select an actor--
         for actor in followed_actors
           if actor.did == followed_for_random_actors
@@ -25,7 +25,7 @@ block content
         input#how_much_actor_sites_together.form-control(type='text', name='how_much_actor_sites_together', value=howMuchActorSitesTogether )
       br
       label(for='keywords') Keywords (separated by comma and other punctuations):
-      input#keywords.form-control(type='text', name='keywords', value=keywords)
+      input#keywords.form-control.col-md-3(type='text', name='keywords', value=keywords)
     div.form-group
       input#remove_followed_by_standard_follower.checkbox-input(type='checkbox', name='remove_followed_by_standard_follower', checked=remove_followed_by_standard_follower_CHECKED)
       label(for='remove_followed_by_standard_follower') &nbsp;Remove actors already followed by standard follower.
@@ -38,8 +38,21 @@ block content
       br
       input#show_despite_open_date_exists.checkbox-input(type='checkbox', name='show_despite_open_date_exists', checked=show_despite_open_date_exists_CHECKED)
       label(for='show_despite_open_date_exists') &nbsp;Show actors despite open date exists.
+    button.btn.btn-primary(type='submit', name='action', value='mainForm') Submit
+    br
+    br
+    .form-row
+      .col-md-1.form-group
+        label(for="firstName") Start date:
+        input#following_start_date.form-control(type="text" name="following_start_date",  placeholder="yyyy-mm-dd", value=following_start_date)
+      .col-md-1.form-group
+        label(for="lastName") End date:
+        input#following_end_date.form-control(type="text" name="following_end_date",  placeholder="yyyy-mm-dd", value=following_end_date)
+      .col-md-2
+        br
+        p Get list to unfollow actors (by open date, only users not following standard follower).
 
-    button.btn.btn-primary(type='submit') Submit
+    button.btn.btn-primary(type='submit', name='action', value='dateRange') Submit
 
   if errors
     ul
