Now also followers of standard follower can be stored.

--- a/views/followers_of_actor.pug
+++ b/views/followers_of_actor.pug
@@ -16,4 +16,4 @@ block content
         li!= error.msg
 
   br 
-  p The start value of the form is the DID of the standard actor. For this actor, not the followers but the follows are stored.
+  p The start value of the form is the DID of the standard actor. It is useful to update the standard actor before filterung actors by date range.
